src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>DP_WKP_SPEC_OTHERS__c</fullName>
        <description>IMS COM - Other speciality comming from IMS are concatenated in this field in the order of importance defined by IMS (Speciality 3, Speciality 4, Speciality 5)</description>
        <inlineHelpText>IMS COM - Other speciality comming from IMS are concatenated in this field in the order of importance defined by IMS (Speciality 3, Speciality 4, Speciality 5)</inlineHelpText>
        <label>IMS Wkp. Speciality - Others</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdominal/Digestive Surgery</fullName>
                </value>
                <value>
                    <fullName>Addiction Medicine</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Allergology</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology</fullName>
                </value>
                <value>
                    <fullName>Angiology</fullName>
                </value>
                <value>
                    <fullName>Audiology</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biophysics</fullName>
                </value>
                <value>
                    <fullName>Burn Care</fullName>
                </value>
                <value>
                    <fullName>Cardiac Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiothoracic/Thoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular/Vascular Surgery</fullName>
                </value>
                <value>
                    <fullName>Child &amp; Adolescent Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Child Surgery</fullName>
                </value>
                <value>
                    <fullName>Colorectal Surgery</fullName>
                </value>
                <value>
                    <fullName>Dementia (Alzheimer)</fullName>
                </value>
                <value>
                    <fullName>Dentistry</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetology</fullName>
                </value>
                <value>
                    <fullName>Dialysis</fullName>
                </value>
                <value>
                    <fullName>Dietetics</fullName>
                </value>
                <value>
                    <fullName>Diving Medicine</fullName>
                </value>
                <value>
                    <fullName>Echocardiography</fullName>
                </value>
                <value>
                    <fullName>Electroencephalography</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_WKP_STATE__c</fullName>
        <description>IMS COMMON - Situation of the workplace: Open, Closed...</description>
        <inlineHelpText>IMS COMMON - Situation of the workplace: Open, Closed...</inlineHelpText>
        <label>IMS Wkp. State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                    <isActive>false</isActive>
                    <label>Invalid</label>
                </value>
                <value>
                    <fullName>Is opening</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                    <isActive>false</isActive>
                    <label>Provisional</label>
                </value>
                <value>
                    <fullName>Valid</fullName>
                    <isActive>false</isActive>
                    <label>Valid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_WKP_STATUS__c</fullName>
        <description>Controlling field for Wkp State</description>
        <inlineHelpText>Status of the Workplace (Account) as provided by IMS</inlineHelpText>
        <label>IMS Wkp. Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_WKP_STRUCTURE_TYPE__c</fullName>
        <description>IMS COMMON - Indentifies the workplaces organizational level within a hierarchy structure. In Onekey, a workplace can be a single-level entity, e.g. a private practice, but also a department, a group of departments, or a group of organizations.</description>
        <inlineHelpText>IMS COMMON - Indentifies the workplaces organizational level within a hierarchy structure. In Onekey, a workplace can be a single-level entity, e.g. a private practice, but also a department, a group of departments, or a group of organizations.</inlineHelpText>
        <label>IMS Wkp. Structure Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Association, Fellowship</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Group of Organisations</fullName>
                </value>
                <value>
                    <fullName>Instances, Committees</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous, Unqualified</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Organisation</fullName>
                </value>
                <value>
                    <fullName>Sub Department, Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_WKP_TYPE__c</fullName>
        <description>IMS COMMON - The most detailed classification of a workplace. This classification facilitates a finer targeting of workplaces. Ex: Private Hospitals and Psychiatric Hospitals as opposed to Hospitals</description>
        <inlineHelpText>IMS COMMON - The most detailed classification of a workplace. This classification facilitates a finer targeting of workplaces. Ex: Private Hospitals and Psychiatric Hospitals as opposed to Hospitals</inlineHelpText>
        <label>IMS Wkp. Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anticancer Center</fullName>
                </value>
                <value>
                    <fullName>Association, Fellowship</fullName>
                </value>
                <value>
                    <fullName>Barrack, Fire Station (Healthcare unit)</fullName>
                </value>
                <value>
                    <fullName>Blood Transfusion Center</fullName>
                </value>
                <value>
                    <fullName>Board, Committee</fullName>
                </value>
                <value>
                    <fullName>Buying Groups</fullName>
                </value>
                <value>
                    <fullName>Child Care Center</fullName>
                </value>
                <value>
                    <fullName>Continuing Medical Education Provider</fullName>
                </value>
                <value>
                    <fullName>Cosmetic store</fullName>
                </value>
                <value>
                    <fullName>Dental Clinic/Practice</fullName>
                </value>
                <value>
                    <fullName>Dialysis Center</fullName>
                </value>
                <value>
                    <fullName>Drug-Alcohol Abuse Center</fullName>
                </value>
                <value>
                    <fullName>Emergencies</fullName>
                </value>
                <value>
                    <fullName>Governmental or official Health Administration</fullName>
                </value>
                <value>
                    <fullName>Health Authority/Agency</fullName>
                </value>
                <value>
                    <fullName>Health Center (Private)</fullName>
                </value>
                <value>
                    <fullName>Health Center (Public)</fullName>
                </value>
                <value>
                    <fullName>Home Care</fullName>
                </value>
                <value>
                    <fullName>Hospital (Day)</fullName>
                </value>
                <value>
                    <fullName>Hospital (General)</fullName>
                </value>
                <value>
                    <fullName>Hospital (Maternity)</fullName>
                </value>
                <value>
                    <fullName>Hospital (Military)</fullName>
                </value>
                <value>
                    <fullName>Hospital (Private)</fullName>
                </value>
                <value>
                    <fullName>Hospital (Psychiatric)</fullName>
                </value>
                <value>
                    <fullName>Hospital (Specialised)</fullName>
                </value>
                <value>
                    <fullName>Hospital (University, teaching)</fullName>
                </value>
                <value>
                    <fullName>Insurance (Private/Mutual)</fullName>
                </value>
                <value>
                    <fullName>Insurance (Public social security)</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nameMeta__c</fullName>
        <label>nameMeta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ADANA_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_CITY</field>
            <operation>equals</operation>
            <value>ADANA</value>
        </filters>
        <label>ADANA Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_TR_Admin</group>
            <group>Baxter_TR_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>DP_WKP_ACT_LOCATION__c</columns>
        <columns>DP_WKP_EMAIL__c</columns>
        <columns>DP_WKP_SPEC_1__c</columns>
        <columns>DP_WKP_SPEC_2__c</columns>
        <columns>DP_WKP_SPEC_OTHERS__c</columns>
        <columns>DP_WKP_STATE__c</columns>
        <columns>DP_WKP_STRUCTURE_TYPE__c</columns>
        <columns>DP_WKP_TYPE__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>BST_TOP_LVL_PARENT_ACCNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DP_WKP_STATUS__c</field>
            <operation>notEqual</operation>
            <value>Invalid</value>
        </filters>
        <filters>
            <field>DP_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.BST_IMS_Account</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Accounts_in_System</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>DP_WKP_ACT_LOCATION__c</columns>
        <columns>DP_FR_WKP_ACT_STRUCTURE__c</columns>
        <columns>DP_WKP_EMAIL__c</columns>
        <columns>DP_WKP_SPEC_1__c</columns>
        <columns>DP_WKP_SPEC_2__c</columns>
        <columns>DP_WKP_STATE__c</columns>
        <columns>DP_WKP_STRUCTURE_TYPE__c</columns>
        <columns>DP_WKP_TYPE__c</columns>
        <columns>BST_TOP_LVL_PARENT_ACCNT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts in System</label>
        <language>en_US</language>
        <sharedTo>
            <role>GM_Benelux</role>
            <role>GM_France_Benelux</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Avrupa</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_CITY</field>
            <operation>equals</operation>
            <value>Avrupa</value>
        </filters>
        <label>All Avrupa</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_TR_Admin</group>
            <group>Baxter_TR_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_Data</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>BST_COUNTRY__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_COUNTRY</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_COUNTRY</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CA Data</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>DP_WKP_ACT_LOCATION__c</columns>
        <columns>DP_FR_WKP_ACT_STRUCTURE__c</columns>
        <columns>DP_WKP_EMAIL__c</columns>
        <columns>DP_WKP_SPEC_1__c</columns>
        <columns>DP_WKP_SPEC_2__c</columns>
        <columns>DP_WKP_STATE__c</columns>
        <columns>DP_WKP_STRUCTURE_TYPE__c</columns>
        <columns>DP_WKP_TYPE__c</columns>
        <columns>BST_TOP_LVL_PARENT_ACCNT__c</columns>
        <filterScope>MyTerritory</filterScope>
        <filters>
            <field>DP_WKP_STATUS__c</field>
            <operation>notEqual</operation>
            <value>Invalid</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.BST_IMS_Account</value>
        </filters>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>BST_Baxter_Only</fullName>
        <active>true</active>
        <description>This may be used for Non-HCP (Health Care Provider) Accounts and will not generate an audit log or data provider integration flow.</description>
        <label>Baxter Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_Competitor</fullName>
        <active>true</active>
        <description>This record type will be used to store all the competitors and also the Baxter Account (in order to be used in BU Profiling for Competitive Information reasons)</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_IMS_Account</fullName>
        <active>true</active>
        <description>Used for details about Health Care Entities (hospitals, departments, etc.), as contracted with your data provider. Creating or updating these records initiates the approval process to your Country Admin, and validation with data provider when appropriate</description>
        <label>IMS Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BST_Check_value_of_workplace_status</fullName>
        <active>true</active>
        <description>Condition to check if any user other than Business admin has selected value as invalid</description>
        <errorConditionFormula>AND (NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)) ,   ISPICKVAL( DP_WKP_STATUS__c , &apos;Invalid&apos;),  RecordType.DeveloperName = &apos;BST_IMS_Account&apos; )</errorConditionFormula>
        <errorDisplayField>DP_WKP_STATUS__c</errorDisplayField>
        <errorMessage>Select Value Other Than Invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Competitor_Country_Mandatory</fullName>
        <active>false</active>
        <description>Competitor/Baxter only Country field should be required during Competitor/Baxter only Account creation.</description>
        <errorConditionFormula>AND(ISBLANK( TEXT( BST_COUNTRY__c ) ),
 OR( RecordType.DeveloperName = &apos;BST_IMS_Account&apos; , RecordType.DeveloperName = &apos;BST_Competitor&apos;, RecordType.DeveloperName = &apos;BST_Baxter_Only&apos;) 
)</errorConditionFormula>
        <errorDisplayField>BST_COUNTRY__c</errorDisplayField>
        <errorMessage>Country Is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Competitor_Name_Mandatory</fullName>
        <active>true</active>
        <description>Competitor Account Name field should be required during Competitor Account creation.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;BST_Competitor&quot;,ISBLANK(Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name Is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_IMS_Account_Addres_details_valid</fullName>
        <active>true</active>
        <description>If any of the mentioned field is black then the system will throw an error.</description>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName = &quot;BST_IMS_Account&quot;, RecordType.DeveloperName = &quot;BST_Baxter_Only&quot;),(ISBLANK( BillingStreet )  ||  ISBLANK( BillingCity ) ||  ISBLANK( BillingPostalCode )  ||  ISBLANK( BillingCountry )))</errorConditionFormula>
        <errorMessage>Billing Address Must Be Completed.</errorMessage>
    </validationRules>
</CustomObject>